# triangles

./: .gitignore  000.txt  CMakeLists.txt  file.cpp  main.cpp  readme.md  tmp.txt
debug_utils/: ASSERT.h  debug_utils.hpp  error_control.cpp  error_control.h  logs.tpp
debug_utils/error_control/: ASSERT.hpp  error_control.hpp
debug_utils/logs/: logs.hpp
debug_utils/time_control/: time_control.hpp
figures/: geometry_consts.hpp  line.hpp  plane.hpp  point.hpp  triangle.hpp  vector.hpp
interactio_with_user/: unteraction_with_user.cpp  unteraction_with_user.hpp
src/: CMakeLists.txt  main.cpp
src/figures/include/: figures.hpp  line.hpp  plane.hpp  point.hpp  triangle.hpp  vector.hpp
src/figures/src/: line.cpp  plane.cpp  triangle.cpp  vector.cpp
src/my_math/: my_math_func.cpp  my_math_func.hpp
src/octree/: node.hpp  octant.hpp  octree.cpp  octree.hpp
src/triangles_ui/: ui.cpp  ui.hpp
tests/: CMakeLists.txt
tests/end_to_end_tests/: e2e_test.py  e2e_tests.cpp  e2e_tests.hpp  main.cpp
tests/unit_tests/: CMakeLists.txt  main.cpp  my_tests.hpp  plane_tests.hpp  point_tests.hpp  triangle_tests.hpp  unit_tests.hpp  vector_test.hpp
triangles/: CMakeLists.txt  main.cpp
triangles/figures/: line.hpp  linear_algebra.cpp  linear_algebra.hpp  plane.hpp  point.hpp  triangle.hpp  vector.hpp
triangles/figures/include/: plane.hpp  vector.hpp
triangles/figures/src/: line.cpp  triangle.cpp
triangles/triangles_ui/: ui.cpp  ui.hpp
